# tomador-apuntes-divia

./: .gitignore  AGENTS.md  README.md  pyproject.toml  run-dev.ps1
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
src/tomador_apuntes/: __init__.py  app.py  export.py  presentation.py  session.py
src/tomador_apuntes/static/: app.js  index.html  styles.css
tests/: test_export.py  test_presentation.py  test_session.py
